--- a/tarea-backend/src/main/resources/application.properties
+++ b/tarea-backend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Tarea List
+
+spring.datasource.url=jdbc:mysql://localhost:3306/tarea_list
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
